updated CSS of open-source-code link

--- a/src/style.css
+++ b/src/style.css
@@ -114,3 +114,10 @@ hr {
   font-style: italic;
   font-weight: 700;
 }
+
+.open-source-code {
+  display: block;
+  position: relative;
+  left: 425px;
+  bottom: 40px;
+}
