--- a/src/style.css
+++ b/src/style.css
@@ -49,6 +49,7 @@ hr {
   display: block;
   text-align: center;
   font-size: 18px;
+  margin-bottom: 15px;
 }
 
 .current-temp {
@@ -57,6 +58,7 @@ hr {
   font-size: 50px;
   font-weight: 900;
   color: #5a6275;
+  line-height: 1;
 }
 
 .current-scale {
@@ -75,6 +77,7 @@ hr {
 
 .current-temp-emoji {
   font-size: 80px;
+  margin-left: 15px;
 }
 
 .monday,
